--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,8 +1,8 @@
 <% layout('/layouts/boilerplate') %>
 
 <div class="row mt-3">
-  <div class="col-8 offset-2">
-    <h2>Edit your listing</h2>
+  <div class="col-12 col-md-8 offset-md-2">
+    <h2 class="text-center mb-4">Edit your Listing</h2>
     <form
       action="/listings/<%= listing._id %>?_method=PUT"
       method="post"
@@ -31,21 +31,21 @@
         >
 <%= listing.description %></textarea
         >
-        <div class="invalid-feedback">Please enter little description</div>
+        <div class="invalid-feedback">Please enter a brief description</div>
       </div>
 
       <div class="mb-3">
         <p>Original Listing Image</p>
-        <img src="<%= originalImageUrl %>" alt="" />
+        <img src="<%= originalImageUrl %>" alt="Original Listing" class="img-fluid mb-2" />
       </div>
 
       <div class="mb-3">
-        <label class="form-label" for="image">Upload New Image </label>
+        <label class="form-label" for="image">Upload New Image</label>
         <input type="file" name="listing[image]" class="form-control" />
       </div>
 
       <div class="row">
-        <div class="mb-3 col-md-4">
+        <div class="mb-3 col-md-4 col-12">
           <label class="form-label" for="price">Price</label>
           <input
             type="number"
@@ -55,7 +55,7 @@
             required
           />
         </div>
-        <div class="mb-3 col-md-8">
+        <div class="mb-3 col-md-8 col-12">
           <label class="form-label" for="country">Country</label>
           <input
             type="text"
@@ -77,8 +77,8 @@
           required
         />
       </div>
-      <br />
-      <button class="btn btn-dark add-btn">Add</button>
+
+      <button class="btn btn-dark add-btn w-100 mb-3">Update Listing</button>
     </form>
   </div>
 </div>
