--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,93 +1,10 @@
-<!-- <% layout('/layouts/boilerplate') %>
-
-  <br /><br />
-
-  <div class="row">
-    <div class="col-8 offset-2">
-      <h2>Create a new listing</h2>
-      <form
-        action="/listings"
-        method="post"
-        class="needs-validation"
-        novalidate
-      >
-        <div class="mb-3">
-          <label class="form-label" for="title">Title</label>
-          <input
-            type="text"
-            name="listing[title]"
-            placeholder="Add a catchy title"
-            class="form-control"
-            required
-          />
-          <div class="valid-feedback">Title looks good</div>
-        </div>
-        <div class="mb-3">
-          <label for="description" class="form-label">Description</label>
-          <textarea
-            type="text"
-            name="listing[description]"
-            class="form-control"
-            required
-          ></textarea>
-        </div>
-        <div class="mb-3">
-          <label class="form-label" for="image">Image Link</label>
-          <input
-            type="text"
-            name="listing[image]"
-            placeholder="Enter img url"
-            class="form-control"
-          />
-        </div>
-
-        <div class="row">
-          <div class="mb-3 col-md-4">
-            <label class="form-label" for="price">Price</label>
-            <input
-              name="listing[price]"
-              placeholder="1200"
-              class="form-control"
-              required
-            />
-          </div>
-          <div class="mb-3 col-md-8">
-            <label class="form-label" for="country">Country</label>
-            <input
-              type="text"
-              name="listing[country]"
-              placeholder="India"
-              class="form-control"
-              required
-            />
-          </div>
-        </div>
-        <div class="mb-3">
-          <label class="form-label" for="location">Location</label>
-          <input
-            type="text"
-            name="listing[location]"
-            placeholder="Jaipur, Rajasthan"
-            class="form-control"
-            required
-          />
-        </div>
-        <button class="btn btn-dark add-btn bt-3">Add</button>
-        <br> <br>
-      </form>
-    </div>
-  </div> -->
-
-
-
-
-  <% layout('/layouts/boilerplate') %>
+<% layout('/layouts/boilerplate') %>
 
 <br /><br />
 
 <div class="row">
-  <div class="col-8 offset-2">
-    <h2>Create a new listing</h2>
+  <div class="col-12 col-md-8 offset-md-2">
+    <h2 class="text-center mb-4">Create a New Listing</h2>
     <form
       action="/listings"
       method="post"
@@ -106,18 +23,21 @@
         />
         <div class="valid-feedback">Title looks good</div>
       </div>
+
       <div class="mb-3">
         <label for="description" class="form-label">Description</label>
         <textarea
           type="text"
           name="listing[description]"
           class="form-control"
+          placeholder="Describe your listing"
           required
         ></textarea>
+        <div class="invalid-feedback">Please provide a description.</div>
       </div>
       
       <div class="mb-3">
-        <label class="form-label" for="image">Upload Listing Image </label>
+        <label class="form-label" for="image">Upload Listing Image</label>
         <input
           type="file"
           name="listing[image]"
@@ -127,7 +47,7 @@
       </div>
 
       <div class="row">
-        <div class="mb-3 col-md-4">
+        <div class="mb-3 col-md-4 col-12">
           <label class="form-label" for="price">Price</label>
           <input
             name="listing[price]"
@@ -137,7 +57,7 @@
             required
           />
         </div>
-        <div class="mb-3 col-md-8">
+        <div class="mb-3 col-md-8 col-12">
           <label class="form-label" for="country">Country</label>
           <input
             type="text"
@@ -148,6 +68,7 @@
           />
         </div>
       </div>
+
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
         <input
@@ -158,8 +79,8 @@
           required
         />
       </div>
-      <button class="btn btn-dark add-btn bt-3">Add</button>
-      <br> <br>
+
+      <button class="btn btn-dark w-100 mb-3">Add Listing</button>
     </form>
   </div>
 </div>
