--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,8 +1,8 @@
 <% layout('/layouts/boilerplate') %>
 
 <div class="row mt-3">
-  <h1 class="col-6 offset-3">Login on Homi</h1>
-  <div class="col-6 offset-3">
+  <h1 class="col-6 offset-3 fs-5 text-center">Login on Homi</h1>
+  <div class="col-12 col-md-6 offset-md-3">
     <form action="/login" method="POST" class="needs-validation" novalidate>
       <div class="mb-3">
         <label class="form-label" for="username">Username</label>
@@ -23,8 +23,8 @@
           class="form-control"
           required
         />
-        <button class="btn btn-success mt-3">Login</button>
       </div>
+      <button class="btn btn-success w-100">Login</button>
     </form>
   </div>
 </div>
